--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 django==1.4
 django-articles==2.4.1
 south==0.7.4
-django-grappelli==2.3.8
 # PIL==1.1.7 #install me with apt-get!
+-e git+https://github.com/sehmaschine/django-grappelli.git@grappelli_2_4#egg=django-grappelli
 simplejson==2.1.2
 sorl-thumbnail==11.04
 django-devserver==0.3.2
