--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ static/*
 scripts/backups
 txrx/txrx.db
 txrx/settings/local.py
- # I'm merging this project into txrx.rog/txrx as chores
+ # I'm merging this project into txrx.org/txrx as chores
 goldstar/*
 env
 env/*
