--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ south==0.7.4
 simplejson==2.1.2
 sorl-thumbnail==11.12
 django-devserver==0.3.2
+psycopg2==2.4.1
+-e git+https://github.com/pizzapanther/Django-Crop-Override-Field.git#egg=django-crop-override
