Trying to enable password resets

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ django-devserver==0.3.2
 django-registration==0.8
 -e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
+django-password-reset
