--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ django-registration==0.8
 -e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
 django-password-reset
-django-less==0.3
+"BeautifulSoup<4.0"
+django_compressor
