zinnia no longer under south migratioins

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ django-registration==0.8
 -e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
 django-password-reset
-"BeautifulSoup<4.0"
+BeautifulSoup==3.2.1
 django_compressor==1.2
+django-mptt==0.5.4
