--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -16,7 +16,8 @@ django-password-reset
 BeautifulSoup==3.2.1
 
 django-mptt==0.5.4
-#django==1.3.1
+-e git+https://github.com/chriscauley/django-mptt-comments.git#egg=django-mptt-comments
+
 django-redis-cache
 Markdown==2.0.3
 django-timezones==0.2
