--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -7,12 +7,13 @@ simplejson==2.1.2
 sorl-thumbnail==11.12
 django-devserver==0.4
 #we need this but there's a problem with the pip version, mx.DateTime problem
-#psycopg2==2.4.1
+psycopg2==2.4.6
 django-registration==0.8
 -e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
 #django-blog-zinnia
 django-password-reset
+django_compressor==1.2
 BeautifulSoup==3.2.1
 
 django-mptt==0.5.4
