adding pjax first pass

--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -32,3 +32,4 @@ django-debug-toolbar
 django-tagging
 -e git+https://github.com/alekam/django-tagging-autocomplete.git#egg=django-tagging-autocomplete
 -e git://github.com/marcuswhybrow/django-wmd-editor.git#egg=django_wmd_editor
+-e git+git://github.com/jacobian/django-pjax.git#egg=django-pjax
