--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -3,14 +3,17 @@ south==0.7.6
 # PIL==1.1.7 #install me with apt-get!
 django-grappelli
 simplejson==2.1.2
-sorl-thumbnail==11.12
 django-devserver==0.4
 django-registration==0.8
--e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
 django-password-reset
 django_compressor==1.2
 BeautifulSoup==3.2.1
+
+#image stuff
+sorl-thumbnail==11.12
+-e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
+pillow==2.1.0
 
 django-mptt==0.5.4
 -e git+https://github.com/chriscauley/django-mptt-comments.git#egg=django-mptt-comments
