adding the first front end display of feed.models.Thing

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,3 +1,7 @@
+upstream django {
+  server 127.0.0.1:3033;
+}
+
 server {
   if ($host ~* "^classes.txrxlabs.org$") {
     rewrite ^.*(?=\/)(.+)$ http://txrxlabs.org/classes/ permanent;
@@ -5,27 +9,15 @@ server {
   }
 
   listen   80;
-  root /var/www/apps/{{ project_name }}/;
-  server_name txrxlabs.org dev.txrxlabs.org;
+  root /home/django/txrx.org/;
+  server_name txrxlabs.org dev.txrxlabs.org deepthought.herefm.com;
 
   # individual nginx logs for this gitlab vhost
-  access_log  /var/log/nginx/{{ project_name }}-live_access.log;
-  error_log   /var/log/nginx/{{ project_name }}-live_error.log;
+  access_log  /var/log/nginx/txrxlabs.org-live_access.log;
+  error_log   /var/log/nginx/txrxlabs.org-live_error.log;
 
   client_max_body_size 24M;
 
-  location / {
-    proxy_read_timeout 300;
-    proxy_connect_timeout 300;
-    proxy_redirect     off;
-
-    #proxy_set_header   X-Forwarded-Proto $scheme;
-    #proxy_set_header   Host              $http_host;
-    #proxy_set_header   X-Real-IP         $remote_addr;
-
-    uwsgi_pass  127.0.0.1:46536;
-    include     uwsgi_params;
-  }
   location /static/ {
     alias /home/django/txrx.org/.static/;
     error_page 404 = /static/404.html;
@@ -42,5 +34,9 @@ server {
     alias /home/django/txrx.org/.media/;
     error_page 404 = /static/404.html;
     expires 24h;
+  }
+  location / {
+    uwsgi_pass django;
+    include uwsgi_params;
   }
 }
