--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -29,5 +29,6 @@ django-tagging
 -e git+https://github.com/alekam/django-tagging-autocomplete.git#egg=django-tagging-autocomplete
 -e git://github.com/marcuswhybrow/django-wmd-editor.git#egg=django_wmd_editor
 
+django-recaptcha==0.0.6
 django-next-please
 icalendar
