--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -10,7 +10,8 @@ server {
 
   listen   80;
   root /home/django/txrx.org/;
-  server_name txrxlabs.org dev.txrxlabs.org deepthought.herefm.com;
+  server_name www.txrxlabs.org dev.txrxlabs.org deepthought.herefm.com old.txrxlabs.org txrxlabs.org;
+  deny 198.246.249.35;
 
   # individual nginx logs for this gitlab vhost
   access_log  /var/log/nginx/txrxlabs.org-live_access.log;
