--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,13 +1,14 @@
-django==1.4
+django==1.5
 south==0.7.6
 # PIL==1.1.7 #install me with apt-get!
 django-grappelli
 simplejson==2.1.2
-django-devserver==0.4
-django-registration==0.8
+django-devserver
+django-registration
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
 django_compressor==1.3
 BeautifulSoup==3.2.1
+psycopg2
 
 #image stuff
 -e git+https://github.com/chriscauley/sorl-thumbnail.git#egg=sorl-thumbnail
