--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -10,7 +10,7 @@ server {
 
   listen   80;
   root /home/django/txrx.org/;
-  server_name www.txrxlabs.org dev.txrxlabs.org deepthought.herefm.com old.txrxlabs.org txrxlabs.org;
+  server_name *.txrxlabs.org;
   deny 198.246.249.35;
 
   # individual nginx logs for this gitlab vhost
