--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -11,7 +11,7 @@ server {
 
   listen   80;
   root /home/django/txrx.org/;
-  server_name *.txrxlabs.org;
+  server_name *.txrxlabs.org txrxlabs.org;
   deny 198.246.249.35;
 
   # individual nginx logs for this gitlab vhost
