--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -7,6 +7,7 @@ django-devserver
 django-registration
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
 django_compressor==1.3
+django-localflavor
 BeautifulSoup==3.2.1
 psycopg2
 
