--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -42,3 +42,45 @@ server {
     include uwsgi_params;
   }
 }
+
+server {
+  if ($host ~* "^classes.txrxlabs.org$") {
+    rewrite ^.*(?=\/)(.+)$ http://txrxlabs.org/classes/ permanent;
+    break;
+  }
+
+  listen   443;
+  root /home/django/txrx.org/;
+  server_name *.txrxlabs.org txrxlabs.org;
+  deny 198.246.249.35;
+
+  ssl on;
+  ssl_certificate /etc/nginx/ssl/herefm.ca-bundle;
+  ssl_certificate_key /etc/nginx/ssl/server.key;
+  access_log  /var/log/nginx/txrxlabs.org-live_access.log;
+  error_log   /var/log/nginx/txrxlabs.org-live_error.log;
+
+  client_max_body_size 24M;
+
+  location /static/ {
+    alias /home/django/txrx.org/.static/;
+    error_page 404 = /static/404.html;
+    expires 24h;
+    gzip on;
+    gzip_min_length 1000;
+    gzip_vary on;
+    gzip_comp_level 6;
+    gzip_proxied any;
+    gzip_types text/plain text/html application/xml text/css application/x-javascript application/javascript text/javascript application/octet-stream;
+    gzip_buffers 128 4k;
+  }
+  location /media/ {
+    alias /home/django/txrx.org/.media/;
+    error_page 404 = /static/404.html;
+    expires 24h;
+  }
+  location / {
+    uwsgi_pass django;
+    include uwsgi_params;
+  }
+}
