updating nginx to turn on ssl

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -6,7 +6,7 @@ upstream django {
 server {
     listen      80;
     server_name *.txrxlabs.org txrxlabs.org;
-    return 301 https://txrxlabs.org;
+    return 301 https://$host$request_uri;
 }
 
 server {
