updating nginx to turn on ssl

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -5,8 +5,14 @@ upstream django {
 
 server {
     listen      80;
+    server_name classes.txrxlabs.org;
+    return 302 https://txrxlabs.org/classes/;
+}
+
+server {
+    listen      80;
     server_name *.txrxlabs.org txrxlabs.org;
-    return 301 https://$host$request_uri;
+    return 302 https://txrxlabs.org$request_uri;
 }
 
 server {
