--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -24,7 +24,7 @@ server {
   listen   443;
   root /home/django/txrx.org/;
   server_name *.txrxlabs.org txrxlabs.org;
-  deny 198.246.249.35;
+  #deny 198.246.249.35;
 
   ssl on;
   ssl_certificate /etc/nginx/ssl/txrxlabs.ca-bundle;
