adding favicon to nginx conf

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -34,6 +34,9 @@ server {
 
   client_max_body_size 24M;
 
+  location /favicon.ico {
+    return 302 /static/favicon.ico;
+  }
   location /static/ {
     alias /home/django/txrx.org/.static/;
     error_page 404 = /static/404.html;
