hopefully removing some bad apples from our referrer list

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -55,6 +55,10 @@ server {
     expires 24h;
   }
   location / {
+    valid_referers semalt.com sharebutton.net;
+    if ($invalid_referer = ''){
+      return 403;
+    }
     uwsgi_pass django;
     include uwsgi_params;
   }
