--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,6 +1,5 @@
-django==1.7
-# PIL==1.1.7 #install me with apt-get!
-simplejson==2.1.2
+django==1.7.8
+pillow
 django-devserver
 -e git+https://github.com/chriscauley/django-registration.git#egg=django-registration
 -e git+https://github.com/dcramer/django-paypal.git#egg=django-paypal
