trying to get rid of phantom host error emails

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,18 +1,17 @@
-server { return 404; }
 upstream django {
   server 127.0.0.1:3033;
 }
 
 server {
-    listen      80;
-    server_name classes.txrxlabs.org;
-    return 302 https://txrxlabs.org/classes/;
+  listen      80;
+  server_name classes.txrxlabs.org;
+  return 302 https://txrxlabs.org/classes/;
 }
 
 server {
-    listen      80;
-    server_name *.txrxlabs.org txrxlabs.org;
-    return 302 https://txrxlabs.org$request_uri;
+  listen      80;
+  server_name *.txrxlabs.org txrxlabs.org;
+  return 302 https://txrxlabs.org$request_uri;
 }
 
 server {
@@ -34,6 +33,9 @@ server {
 
   client_max_body_size 24M;
 
+  if ($host !~* ^(txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
+    return 404;
+  }
   location /favicon.ico {
     return 302 /static/favicon.ico;
   }
