again with the header bug / ALLOWED_HOSTS

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -34,7 +34,7 @@ server {
   client_max_body_size 24M;
 
   if ($host !~* ^(txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
-    return 404;
+    return 302 https://txrxlabs.org$request_uri;
   }
   location /favicon.ico {
     return 302 /static/favicon.ico;
