--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -10,6 +10,12 @@ server {
 
 server {
   listen      80;
+  server_name youth.txrxlabs.org teens.txrxlabs.org kids.txrxlabs.org;
+  return 302 https://txrxlabs.org/classes/?young_adults;
+}
+
+server {
+  listen      80;
   server_name *.txrxlabs.org txrxlabs.org;
   return 302 https://txrxlabs.org$request_uri;
 }
