removing local settings that got accidentally added

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ src/*
 node/*
 
 #relevant to development
-txrx/local.db
-txrx/settings/local.py
+main/local.db
+main/settings/local.py
 *.sql
 scripts/anon.db
 scripts/backup.json
