adding some referal blockers

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -26,6 +26,9 @@ server {
     break;
   }
 
+  if ($http_referer ~* (semalt|social-buttons) ) {
+      return 405;
+  }
   listen   443;
   root /home/django/txrx.org/;
   server_name *.txrxlabs.org txrxlabs.org;
