adding a bash script to aid this nasty migration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 django
-django-devserver
+pip install git+git://github.com/dcramer/django-devserver#egg=django-devserver
 -e git+https://github.com/chriscauley/django-registration.git#egg=django-registration
 django_compressor
 django-localflavor
