--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,5 @@ python-social-auth
 
 -e git+https://github.com/chriscauley/django-shop.git#egg=django-shop
 -e git+https://github.com/chriscauley/django-wmd-editor.git#egg=django_wmd_editor
+-e git+ttps://github.com/chriscauley/lablackey.git#egg=lablackey
 django_paypal==0.2.5
