hooking success callback into modal tag

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -32,7 +32,7 @@ server {
   listen   443;
   root /home/django/txrx.org/;
   server_name *.txrxlabs.org txrxlabs.org;
-  add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+  add_header Strict-Transport-Security "max-age=31536000;";
   #deny 198.246.249.35;
 
   ssl on;
