adding some private urls for certain media files

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -61,6 +61,11 @@ server {
     gzip_types text/plain application/xml text/css application/javascript application/octet-stream;
     gzip_buffers 128 4k;
   }
+  # these files are served through django to make force authentication
+  location /media/signatures/ {
+    uwsgi_pass django;
+    include uwsgi_params;
+  }
   location /media/ {
     alias /home/django/txrx.org/.media/;
     error_page 404 = /static/404.html;
