--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -36,8 +36,8 @@ server {
   #deny 198.246.249.35;
 
   ssl on;
-  ssl_certificate /etc/nginx/ssl/txrxlabs.ca-bundle;
-  ssl_certificate_key /etc/nginx/ssl/server.key;
+  ssl_certificate /etc/nginx/ssl/final.ca-bundle;
+  ssl_certificate_key /etc/nginx/ssl/txrxlabs.org.key;
   access_log  /var/log/nginx/txrxlabs.org-live_access.log;
   error_log   /var/log/nginx/txrxlabs.org-live_error.log;
 
