adding "my.txrxlabs.org"

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -10,6 +10,12 @@ server {
 
 server {
   listen      80;
+  server_name my.txrxlabs.org;
+  return 302 https://txrxlabs.org/my/;
+}
+
+server {
+  listen      80;
   server_name youth.txrxlabs.org teens.txrxlabs.org kids.txrxlabs.org kid.txrxlabs.org teen.txrxlabs.org;
   return 302 https://txrxlabs.org/classes/?young_adults;
 }
@@ -23,6 +29,10 @@ server {
 server {
   if ($host ~* "^classes.txrxlabs.org$") {
     rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/classes/ permanent;
+    break;
+  }
+  if ($host ~* "^my.txrxlabs.org$") {
+    rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/my/ permanent;
     break;
   }
 
@@ -43,7 +53,7 @@ server {
 
   client_max_body_size 24M;
 
-  if ($host !~* ^(txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
+  if ($host !~* ^(txrxlabs.org|my.txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
     return 302 https://txrxlabs.org$request_uri;
   }
   location /favicon.ico {
