--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -10,8 +10,8 @@ server {
 
 server {
   listen      80;
-  server_name my.txrxlabs.org;
-  return 302 https://txrxlabs.org/my/;
+  server_name me.txrxlabs.org;
+  return 302 https://txrxlabs.org/me/;
 }
 
 server {
@@ -31,8 +31,8 @@ server {
     rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/classes/ permanent;
     break;
   }
-  if ($host ~* "^my.txrxlabs.org$") {
-    rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/my/ permanent;
+  if ($host ~* "^me.txrxlabs.org$") {
+    rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/me/ permanent;
     break;
   }
 
@@ -53,7 +53,7 @@ server {
 
   client_max_body_size 24M;
 
-  if ($host !~* ^(txrxlabs.org|my.txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
+  if ($host !~* ^(txrxlabs.org|me.txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
     return 302 https://txrxlabs.org$request_uri;
   }
   location /favicon.ico {
