--- a/requirements.txt
+++ b/requirements.txt
@@ -37,5 +37,5 @@ python-social-auth
 -e git+https://github.com/chriscauley/django-wmd-editor.git#egg=django_wmd_editor
 #-e git+https://github.com/chriscauley/lablackey.git#egg=lablackey
 django_paypal==0.2.5
-dj-stripe
+-e git+https://github.com/kavdev/dj-stripe@1.0.0#egg=dj-stripe
 django-colorful
