--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==1.8.12
+django==1.8.15
 -e git+https://github.com/dcramer/django-devserver.git#egg=django-devserver
 -e git+https://github.com/chriscauley/django-registration.git#egg=django-registration
 django_compressor==2.1
@@ -37,5 +37,8 @@ python-social-auth
 -e git+https://github.com/chriscauley/django-wmd-editor.git#egg=django_wmd_editor
 #-e git+https://github.com/chriscauley/lablackey.git#egg=lablackey
 django_paypal==0.2.5
--e git+https://github.com/kavdev/dj-stripe@1.0.0#egg=dj-stripe
 django-colorful
+
+-e git+https://github.com/kavdev/dj-stripe@1.0.0#egg=dj-stripe
+mock_django
+python-doc-inherit
