--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -53,7 +53,7 @@ server {
 
   client_max_body_size 24M;
 
-  if ($host !~* ^(txrxlabs.org|me.txrxlabs.org|classes.txrxlabs.org|www.txrxlabs.org)$) {
+  if ($host !~* ^(txrxlabs.org|me.txrxlabs.org|classes.txrxlabs.org|txrxlabs.org)$) {
     return 302 https://txrxlabs.org$request_uri;
   }
   location /favicon.ico {
