slightly faster to serve favicon this way

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -57,7 +57,7 @@ server {
     return 302 https://txrxlabs.org$request_uri;
   }
   location /favicon.ico {
-    return 302 /static/favicon.ico;
+    alias /home/django/txrx.org/.static/favicon.ico;
   }
   location /static/ {
     alias /home/django/txrx.org/.static/;
