--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 django==1.9.11
 -e git+https://github.com/dcramer/django-devserver.git#egg=django-devserver
--e git+https://github.com/chriscauley/django-registration.git#egg=django-registration
 django_compressor==2.1
 django-localflavor
 djangorestframework
@@ -16,7 +15,7 @@ ezdxf
 -e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
 pillow==2.1.0
 
-django-mptt==0.7.4
+django-mptt==0.8.6
 -e git+https://github.com/chriscauley/django-unrest-comments.git#egg=django-unrest-comments.git
 
 django-redis-cache
@@ -27,7 +26,7 @@ Pygments
 requests
 -e git://github.com/durden/frappy.git#egg=frappy
 
-django-polymorphic==django-polymorphic==0.9.2
+django-polymorphic==0.9.2
 django-tagging==0.4.5
 django-next-please
 icalendar
@@ -36,7 +35,7 @@ python-social-auth
 -e git+https://github.com/chriscauley/django-shop.git#egg=django-shop
 -e git+https://github.com/chriscauley/django-wmd-editor.git#egg=django_wmd_editor
 #-e git+https://github.com/chriscauley/lablackey.git#egg=lablackey
-django_paypal==0.2.5
+django_paypal==0.3.2
 django-colorful
 
 -e git+https://github.com/kavdev/dj-stripe@1.0.0#egg=dj-stripe
