--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-less": "^3.3.0",
     "gulp-riot": "^1.0.2",
