adding new>notify redirect

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -31,6 +31,10 @@ server {
     rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/classes/ permanent;
     break;
   }
+  if ($host ~* "^new.txrxlabs.org$") {
+    rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/notify/ permanent;
+    break;
+  }
   if ($host ~* "^me.txrxlabs.org$") {
     rewrite ^.*(?=\/)(.+)$ https://txrxlabs.org/me/ permanent;
     break;
