need 302 redirect for notify

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -10,6 +10,12 @@ server {
 
 server {
   listen      80;
+  server_name new.txrxlabs.org;
+  return 302 https://txrxlabs.org/notify/;
+}
+
+server {
+  listen      80;
   server_name me.txrxlabs.org;
   return 302 https://txrxlabs.org/me/;
 }
