--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -56,8 +56,8 @@ server {
   #deny 198.246.249.35;
 
   ssl on;
-  ssl_certificate /etc/nginx/ssl/final.ca-bundle;
-  ssl_certificate_key /etc/nginx/ssl/txrxlabs.org.key;
+  ssl_certificate /etc/letsencrypt/live/txrxlabs.org/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/txrxlabs.org/privkey.pem;
   access_log  /var/log/nginx/txrxlabs.org-live_access.log;
   error_log   /var/log/nginx/txrxlabs.org-live_error.log;
 
