--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -69,6 +69,9 @@ server {
   location /favicon.ico {
     alias /home/django/txrx.org/.static/favicon.ico;
   }
+  location /shop/products.js {
+    alias /home/django/txrx.org/.static/products.js;
+  }
   location /static/ {
     alias /home/django/txrx.org/.static/;
     error_page 404 = /static/404.html;
