--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -7,6 +7,11 @@ server {
   server_name classes.txrxlabs.org;
   return 302 https://txrxlabs.org/classes/;
 }
+server {
+  listen      80;
+  server_name craft4good.org craftersforgood.org;
+  return 302 https://txrxlabs.org/crafters-for-good;
+}
 
 server {
   listen      80;
