one more redirect

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -9,7 +9,7 @@ server {
 }
 server {
   listen      80;
-  server_name craft4good.org craftersforgood.org;
+  server_name craft4good.org craftersforgood.org craftsforgood.org;
   return 302 https://txrxlabs.org/crafters-for-good;
 }
 
