--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "TXRX Labs Website",
   "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chriscauley/txrx.org.git"
@@ -17,22 +15,7 @@
   },
   "homepage": "https://github.com/chriscauley/txrx.org#readme",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-less": "^3.3.0",
-    "gulp-riot": "^1.0.2",
-    "gulp-rollup": "^2.5.1",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "mocha": "^3.2.0",
-    "mocha-phantomjs": "^4.1.0",
-    "rollup-plugin-babel": "^2.6.1",
-    "through2": "^2.0.3"
+    "less": "^3.10.3",
+    "riot": "3.x"
   }
 }
