--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-django==1.9.11
+django==1.9.13
 -e git+https://github.com/dcramer/django-devserver.git#egg=django-devserver
 django_compressor==2.1
-django-localflavor
-djangorestframework
-djangorestframework-jwt
+django-localflavor==1.3
+djangorestframework==3.5.3
 BeautifulSoup==3.2.1
-psycopg2
-django-suit
-django-contrib-comments
+psycopg2-binary==2.8.3
+django-suit==0.2.23
+django-contrib-comments==1.7.3
 django-mailer==1.2.1
 django-model-utils==2.6
 ezdxf
-arrow
+python-memcached==1.59
+arrow==0.14.6
 django-braces==1.9.0
 tqdm==4.10.0
 
 #image stuff
 -e git+https://github.com/chriscauley/sorl-thumbnail.git#egg=sorl-thumbnail
--e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=django-crop-override-field
+-e git+https://github.com/chriscauley/Django-Crop-Override-Field.git#egg=crop-override
 pillow==2.1.0
 
 # unrest commets packages
@@ -27,17 +27,17 @@ django-emoji==2.2.0
 Markdown
 
 
--e git+https://github.com/chriscauley/django-drop.git#egg=drop
--e git+https://github.com/chriscauley/djstripe.git#egg=dj-stripe
--e git+https://github.com/chriscauley/django-unrest-media.git#egg=media
+-e git+https://github.com/chriscauley/django-drop.git#egg=django-drop
+-e git+https://github.com/chriscauley/dj-stripe.git#egg=dj-stripe
+-e git+https://github.com/chriscauley/django-unrest-media.git#egg=django-unrest-media
 
 django-memcache-status
-django-redis-cache
+django-redis-cache==2.0.0
 django-timezones==0.2
 pytz>=2011n
-Pygments
+Pygments==2.1.3
 requests
--e git://github.com/durden/frappy.git#egg=frappy
+#-e git://github.com/durden/frappy.git#egg=frappy
 
 django-polymorphic==0.9.2
 django-tagging==0.4.5
